# Kuber

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: tests.yml
apps/api/devassist_api/: __init__.py  main.py  runtime.py
apps/api/devassist_api/static/: approval-dashboard.css  approval-dashboard.js
deploy/local/: demo-app.yaml
docs/: local-kubernetes-runbook.md  local-mvp-demo.md
scripts/: __init__.py  local_demo.py  smoke_check.py  start-local-dev.ps1  stop-local-dev.ps1
tests/: test_approval_dashboard.py  test_ci_workflow.py  test_compose_stack.py  test_container_image.py  test_demo_manifests.py  test_deployment_status_api.py  test_execution_runtime.py  test_health.py  test_kubernetes_client.py  test_kubernetes_executor.py  test_langchain_parser.py  test_local_demo_script.py  test_local_dev_workflow.py  test_package_metadata.py  test_plan_api.py  test_plan_builder.py  test_plan_repository.py  test_policy_validator.py  test_project_positioning_docs.py  test_run_api.py  test_run_inspection_api.py  test_run_service.py  test_run_store.py  test_runtime_wiring.py  test_schemas.py  test_smoke_check_script.py
