[project]
name = "devassist"
version = "0.1.0"
description = "Kubernetes-native AI-assisted CI/CD orchestrator MVP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111,<1.0",
    "pydantic>=2.7,<3.0",
    "redis>=5.0,<6.0",
    "kubernetes>=30.1,<31.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.2,<9.0",
    "pytest-cov>=5.0,<6.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["apps/api", "packages/core"]

[tool.setuptools.package-data]
devassist_api = ["static/*.css", "static/*.js"]

[tool.pytest.ini_options]
pythonpath = ["apps/api", "packages/core"]
testpaths = ["tests"]
addopts = "-q"
